<resources>
    <string name="app_name">PROJECTFLIX</string>
    <string name="GetStartedString"><![CDATA[Unlimited films, \nTV programmes \n& more]]></string>
    <string name="watchAnywhereString">Watch anywhere. Cancel at any \ntime.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="get_started">Get started</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="movies_scroll_view">Movies categories scroll view</string>
    <string name="categories_container">Movie categories container</string>
    <string name="projectflix_admin">PROJECTFLIX ADMIN</string>
    <string name="movie_management">Movie Management</string>
    <string name="movie_name">Movie Name</string>
    <string name="duration_minutes">Duration (minutes)</string>
    <string name="year">Year</string>
    <string name="description">Description</string>
    <string name="director">Director</string>
    <string name="cast">Cast</string>
    <string name="main_image_url">Main Image URL</string>
    <string name="trailer_url">Trailer URL</string>
    <string name="create_movie">Create Movie</string>
    <string name="category_management">Category Management</string>
    <string name="category_name">Category Name</string>
    <string name="promoted_category">Promoted Category</string>
    <string name="create_category">Create Category</string>
    <string name="search_and_update">Search and Update</string>
    <string name="search_movies_or_categories">Search movies or categories</string>
    <string name="search">Search</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_to_projectflix_sign_up_now">New to ProjectFlix? 😲 Sign Up Now!</string>
    <string name="projectflix">PROJECTFLIX</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in here</string>
    <string name="sign_up">Sign Up</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="categories">Categories</string>
    <string name="show_categories">Show Available Categories</string>
    <string name="hide_categories">Hide Categories</string>
    <string name="search_movies">Search Movies</string>
    <string name="show_movies_for_category">Show Movies for Category</string>
    <string name="hide_movies">Hide Movies</string>
    <string name="show_categories_for_deletion">Show Categories</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="play_movie">Play Movie</string>
    <string name="update">Update</string>
    <string name="profile">Profile</string>
    <string name="admin">Admin</string>
    <string name="logout">Logout</string>
    <string name="api_url">http://10.0.2.2:3000/api/</string>
</resources>