<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="@color/gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/movieDetailImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/movieDetailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/movieDetailYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/light_gray"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:id="@+id/movieDetailDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/light_gray"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/movieDetailDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/light_gray"
                android:layout_marginTop="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/director"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/movieDetailDirector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/light_gray"
                android:layout_marginTop="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cast"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/movieDetailCast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/light_gray"
                android:layout_marginTop="4dp"/>


            <Button
                android:id="@+id/closeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="#FF0000"
                android:text="@string/close"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:padding="12dp"/>

            <Button
                android:id="@+id/playMovieButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/play_movie"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>